--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -7,9 +7,15 @@
   }
 
   .nav-link {
-    min-width: 170px;
     text-align: start;
     color: t.$accent;
+
+    // Fixed min-width on very narrow viewports was pushing the collapsed
+    // navbar past 100vw and causing horizontal scroll. Apply it only
+    // once we're past the collapse breakpoint.
+    @media (min-width: 992px) {
+      min-width: 170px;
+    }
 
     &:not(.navbar-toggler)::after { content: " UwU"; }
 
